  exception and increment by one didn't increment the bank, causing a
  duplicate key error from the database on insert
- Fixed issue in Auto Screens where automatic links had wrong parameter
  name for the entity name (had entityName, now aen)
- Fixed issue where if a standalone screen (or with lastStandalone set) has
  pre-actions the screens before it were not pushed to get authz setup;
  this resolved sourceforge Bug #30

===========================================================================
Release 1.2.0 - 30 Dec 2012
===========================================================================

Moqui Framework release 1.2.0 is a minor new feature release and a major
quality improvement release. This release has undergone significantly more
testing than previous releases because of a wider variety of functionality
that has now been built and tested using the framework, and because of a
unit testing effort (framework unit tests built using Spock).

The new features include popup menus (using the new jQueryUI menu widget),
dynamic-options in XML Form drop-downs with dependency on other fields,
automatic optimization of queries on view-entities to old select member
entities necessary, support for UUID generated primary keys, expanded JCR
support and an Example Content screen, and a number of small improvements
that generally make the framework easier to use and more reliable.

There are some non-backward-compatible changes in this release including
elimination of id-very-long from the data type dictionary (expanding the id
and id-long types), change to database configuration of subscreens to be
based on UserGroup instead of the individual UserAccount (this is a
primary-key change and may require a database metadata update and data
migration), and context isolation for service calls.

This release includes:

- Updated jQuery to 1.8.3 and jQuery UI to 1.9.2
- Updated Apache Camel to 2.10.1, Apache Derby to 10.9.1.0, Apache